k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fighting-characters
  namespace: fighting-characters
spec:
  type: LoadBalancer
  selector:
    app: fighting-characters
  ports:
    - name: http
      port: 80
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: fighting-characters
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
