k8/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fighting-characters
  namespace: fighting-characters
spec:
  type: LoadBalancer
  selector:
    app: fighting-characters
  ports:
    - port: 80
      targetPort: 5000
